[package]
name = "solana-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.17"
base58 = "0.2"
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
spl-token = "4.0"
spl-associated-token-account = "2.2"
bs58 = "0.5"
base64 = "0.21"
